--- a/_config.yml
+++ b/_config.yml
@@ -115,15 +115,15 @@ disqus:
 
 #################################### global configure #######################################
 
-username: minixalpha
-baseurl: /StrayBirds
+username: dipoledipole
+baseurl: /Blog
 markdown: redcarpet
 safe: false
 highlighter: pygments
-title: 飞鸟集
-description: 人生到处知何似，应似飞鸿踏雪泥
-theme: kunka
-disqusname: minixalpha
+title: 滕王阁
+description: 落霞与孤鹜齐飞，秋水共长天一色
+theme: merlot
+disqusname: 
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
 # those themes are all come from GitHub Pages Themes
